Added folder-support, reworked StartPresenter.java, added Labels for Course-Id and Section-Id, added Tooltip "open course folder", fixed "show unknown formats" functionality, added course-view for course-participants, minor fixes.

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
@@ -6,12 +6,16 @@ start.execute = Ausf\u00FChren
 start.visible = Sichtbarkeit
 start.availability = Zeitpunkt
 start.sync.showall = Alle anzeigen
+start.labelcourse = Kurs-Id: 
+start.labelsection = Sektions-Id: 
 start.sync.error.title = Fehler
 start.sync.error.message = Synchronisierung fehlgeschlagen. Bitte versuchen Sie es erneut.
+start.sync.error.permissions = Fehlende Berechtigungen, um den gesamten Kursinhalt einzusehen. Es wird eine \
+  reduzierte Form des Kurses angezeigt. 
 start.settings = Einstellungen
 start.selectcourse = Kurs
 start.selectsection = Sektion
-start.delete = LÃ¶schen
+start.folderButton = Kursordner öffnen
 start.sync.error.fileserver1.message = Fileserver Angaben unvollst\u00E4ndig. Bitte in den Einstellungen erg\u00E4nzen.
 start.sync.error.fileserver2.message = Verbindungsaufbau zum Fileserver fehlgeschlagen. Bitte Einstellungen \u00FCberpr\u00FCfen.
 start.sync.error.course.message = Synchronisierung fehlgeschlagen. Bitte Kurs ausw\u00E4hlen.
