--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
@@ -5,13 +5,16 @@ start.local = Local
 start.execute = Execute
 start.visible = Visibility
 start.sync.showall = Show all
+start.labelcourse = Course-Id: 
+start.labelsection = Section-Id: 
 start.availability = Availability
 start.sync.error.title = Error
 start.sync.error.message = Synchronization failed. Please try again.
+start.sync.error.permissions = Missing permissions. A reduced form of the course is displayed.
 start.settings = Settings
 start.selectcourse = Course
 start.selectsection = Section
-start.delete = Delete
+start.folderButton = Open course-folder
 start.sync.error.fileserver1.message = Fileserver settings incomplete.
 start.sync.error.fileserver2.message = Connecting to fileserver was failed. Please check settings.
 start.sync.error.course.message = Synchronization failed. Please choose a course.
