Added Course- and Section- identification label, Javadocs, extended guest-view, minor fixes.

--- a/moodle-sync-cli/src/main/resources/i18n/cli_de_DE.properties
+++ b/moodle-sync-cli/src/main/resources/i18n/cli_de_DE.properties
@@ -14,4 +14,4 @@ cli.option.login = Pfad zur Konfigurationsdatei mit Login-Daten
 cli.login.properties.missing = Konfigurationsdatei nicht gefunden
 cli.login.properties.invalid = Konfigurationsdatei fehlerbehaftet
 cli.help.header = Folgende Parameter sind zu \u00FCbergeben
-cli.help.footer = \nWenn Sie einen Beitrag leisten oder ein Problem melden m\u00F6chten, besuchen Sie GitHub: https://github.com/lectureStudio/MoodleSync
+cli.help.footer = \nWenn Sie einen Beitrag leisten oder ein Problem melden m\u00F6chten, besuchen Sie GitHub: https://github.com/MoodleSync/sync-app
