--- a/moodle-sync-cli/src/main/resources/i18n/cli_en_US.properties
+++ b/moodle-sync-cli/src/main/resources/i18n/cli_en_US.properties
@@ -14,4 +14,4 @@ cli.option.login = Path to configuration file with login information
 cli.login.properties.missing = Configuration file not found
 cli.login.properties.invalid = Configuration file is faulty
 cli.help.header = The following parameters are required:
-cli.help.footer = \nIf you would like to contribute or report an issue, go to GitHub: https://github.com/lectureStudio/MoodleSync
+cli.help.footer = \nIf you would like to contribute or report an issue, go to GitHub: https://github.com/MoodleSync/sync-app
