--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
@@ -7,7 +7,9 @@ start.visible = Sichtbarkeit
 start.availability = Zeitpunkt
 start.sync.showall = Alle anzeigen
 start.labelcourse = Kurs-Id: 
+start.labelcourse.empty = Bitte Kurs auswählen
 start.labelsection = Sektions-Id: 
+start.labelsection.empty = Bitte Sektion auswählen
 start.sync.error.title = Fehler
 start.sync.error.message = Synchronisierung fehlgeschlagen. Bitte versuchen Sie es erneut.
 start.sync.error.permissions = Fehlende Berechtigungen, um den gesamten Kursinhalt einzusehen. Es wird eine \
