--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
@@ -6,7 +6,9 @@ start.execute = Execute
 start.visible = Visibility
 start.sync.showall = Show all
 start.labelcourse = Course-Id: 
+start.labelcourse.empty = Please select a course
 start.labelsection = Section-Id: 
+start.labelsection.empty = Please select a section
 start.availability = Availability
 start.sync.error.title = Error
 start.sync.error.message = Synchronization failed. Please try again.
