Added Moodle-module dependent download-button, added functionality to download a file (will be saved in sections-directory), added file-download in "guest-view". Please Note: download-function still experimental.

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
@@ -4,6 +4,7 @@ start.update = Aktualisieren
 start.local = Lokal
 start.execute = Ausf\u00FChren
 start.visible = Sichtbarkeit
+start.download =
 start.availability = Zeitpunkt
 start.sync.showall = Alle anzeigen
 start.labelcourse = Kurs-Id: 
