--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
@@ -4,6 +4,7 @@ start.update = Update
 start.local = Local
 start.execute = Execute
 start.visible = Visibility
+start.download =
 start.sync.showall = Show all
 start.labelcourse = Course-Id: 
 start.labelcourse.empty = Please select a course
