Added Button to download all available files. They will be merged into the existing course-directory´s subdirectories. Added download-icon.

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
@@ -5,6 +5,7 @@ start.local = Lokal
 start.execute = Ausf\u00FChren
 start.visible = Sichtbarkeit
 start.download =
+start.download.course = Gesamten Kurs herunterladen
 start.availability = Zeitpunkt
 start.sync.showall = Alle anzeigen
 start.labelcourse = Kurs-Id: 
