--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
@@ -5,6 +5,7 @@ start.local = Local
 start.execute = Execute
 start.visible = Visibility
 start.download =
+start.download.course = Download entire course
 start.sync.showall = Show all
 start.labelcourse = Course-Id: 
 start.labelcourse.empty = Please select a course
