--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_de_DE.properties
@@ -13,6 +13,7 @@ start.labelcourse.empty = Bitte Kurs auswählen
 start.labelsection = Sektions-Id: 
 start.labelsection.empty = Bitte Sektion auswählen
 start.sync.error.title = Fehler
+start.sync.warning.title = Warnung
 start.sync.error.message = Synchronisierung fehlgeschlagen. Bitte versuchen Sie es erneut.
 start.sync.error.permissions = Fehlende Berechtigungen, um den gesamten Kursinhalt einzusehen. Es wird eine \
   reduzierte Form des Kurses angezeigt. 
