--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start_en_US.properties
@@ -13,6 +13,7 @@ start.labelsection = Section-Id:
 start.labelsection.empty = Please select a section
 start.availability = Availability
 start.sync.error.title = Error
+start.sync.warning.title = Warning
 start.sync.error.message = Synchronization failed. Please try again.
 start.sync.error.permissions = Missing permissions. A reduced form of the course is displayed.
 start.settings = Settings
