Work-in-progress save.

--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -15,3 +15,5 @@ settings.ftplabel = Fileserver
 settings.port = Port
 settings.showUnknownFormats = Dateien mit unbekannten Dateiformaten anzeigen
 settings.language = Sprache
+settings.language.explain = Wählen Sie eine Sprache.
+settings.root.explain = Wählen Sie ein Stammverzeichnis, welches die Kurs-Ordner enthalten soll.
