--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -15,3 +15,5 @@ settings.ftplabel = Fileserver
 settings.port = Port
 settings.showUnknownFormats = Show Files with unknown Fileformats
 settings.language = Language
+settings.language.explain = Please choose a language.
+settings.root.explain = Choose a root directory, it will contain the individual course directories.
