--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
@@ -5,6 +5,8 @@ start.local = Lokal
 start.execute = Ausf\u00FChren
 start.visible = Sichtbarkeit
 start.download =
+start.help =
+start.help.tooltip = Öffne Wiki-Seite des GitHub-Projekts
 start.download.course = Gesamten Kurs herunterladen
 start.availability = Zeitpunkt
 start.sync.showall = Alle anzeigen
