--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
@@ -5,6 +5,8 @@ start.local = Local
 start.execute = Execute
 start.visible = Visibility
 start.download =
+start.help =
+start.help.tooltip = Open wik-page at GitHub-Repository
 start.download.course = Download entire course
 start.sync.showall = Show all
 start.labelcourse = Course-Id: 
