--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
@@ -33,3 +33,4 @@ start.sync.error.invalidurl.message = Fehler beim Verbindungsaufbau zur Moodle-P
 start.sync.error.path.message = Root-Verzeichnis fehlerhaft. Bitte in den Einstellungen korrigieren.
 start.sync.error.path.unknown.message = Kein Kurs ausgew\u00E4hlt. Bitte Kurs w\u00E4hlen.
 start.sync.error.upload.message = Upload nicht m\u00F6glich. Bitte Dateigr\u00F6\u00DFe, Moodle-Berechtigungen und Internetverbindung \u00FCberpr\u00FCfen.\nBetreffende Datei: {0}
+start.selectFileServerCourse = Panopto-Kurs
