--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
@@ -32,3 +32,4 @@ start.sync.error.invalidurl.message = Error when connecting to Moodle. Please ch
 start.sync.error.path.message = Root-Directory faulty. Please correct in settings.
 start.sync.error.path.unknown.message = No course chosen. Please choose a course.
 start.sync.error.upload.message = Upload to Moodle not possible, check permissions and upload size. File:
+start.selectFileServerCourse = Panopto-Course
