--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -26,4 +26,10 @@ settings.ftpusername.explain = Eingabe des Fileserver-Nutzernamens.
 settings.ftppassword.explain = Eingabe des Fileserver-Passworts.
 settings.dataformatsfileserver.explain = Angabe der Dateiformate, welche auf dem Fileserver hochgeladen \
   werden sollen.
+settings.choosefileserver = Art des Fileservers
+settings.choosefileserver.explain = Art des Fileservers bestimmen.
+settings.fileserverDefaultFolder = Ausweich-Ordner
+settings.fileserverDefaultFolder.explain = ID des Ausweich-Ordners für den Upload auf Panopto.
+settings.close.error.title = Achtung
+settings.close.error.panopto = Angaben zum Panopto-Zugriff fehlen.
 
