--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -24,3 +24,9 @@ settings.ftp.explain = Enter the Fileserver-Hostname.
 settings.ftpusername.explain = Enter your Fileserver-Username.
 settings.ftppassword.explain = Enter your Fileserver-Password.
 settings.dataformatsfileserver.explain Define which fileformats should be enabled to be uploaded to the fileserver.
+settings.choosefileserver = Fileserver provider.
+settings.choosefileserver.explain = Define which of the supported Fileserver providers you want to use.
+settings.fileserverDefaultFolder = Default directory
+settings.fileserverDefaultFolder.explain = Enter the id of the default directory on Panopto.
+settings.close.error.title = Attention
+settings.close.error.panopto = Missing information about used Panopto cloud.
