--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -21,7 +21,7 @@ settings.dataformatsfileserver.explain = Angabe der Dateiformate, welche auf dem
   werden sollen.
 settings.choosefileserver = Art des Fileservers
 settings.choosefileserver.explain = Art des Fileservers bestimmen.
-settings.choosefileserver.none = None
+settings.choosefileserver.none = Keiner
 settings.close.error.title = Achtung
 settings.close.error.panopto = Angaben zum Panopto-Zugriff fehlen.
 settings.close.error.ftp = Angaben zum FTP-Zugriff fehlen.
