--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -19,7 +19,7 @@ settings.dataformatsmoodle.explain = Define which fileformats should be enabled 
 settings.dataformatsfileserver.explain Define which fileformats should be enabled to be uploaded to the fileserver.
 settings.choosefileserver = Fileserver provider
 settings.choosefileserver.explain = Choose a supported fileserver providers you want to use.
-settings.choosefileserver.none = Keiner
+settings.choosefileserver.none = None
 settings.close.error.title = Attention
 settings.close.error.panopto = Missing information about used Panopto cloud.
 settings.close.error.ftp = Missing information about used FTP server.
