--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_de_DE.properties
@@ -16,6 +16,9 @@ start.labelsection = Sektions-Id:
 start.labelsection.empty = Bitte Sektion auswählen
 start.download.finish.title = MoodleSync
 start.download.finish.message = Download abgeschlossen!
+start.sync.progress = Dateien werden synchronisiert.
+start.sync.upload = Upload von 
+start.sync.finished = Synchronisierung abgeschlossen!
 start.sync.error.title = Fehler
 start.sync.warning.title = Warnung
 start.sync.error.message = Synchronisierung fehlgeschlagen. Bitte versuchen Sie es erneut.
