--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart_en_US.properties
@@ -16,6 +16,9 @@ start.labelsection.empty = Please select a section
 start.download.finish.title = MoodleSync
 start.download.finish.message = Download finished!
 start.availability = Availability
+start.sync.progress = Synchronization in progress.
+start.sync.upload = Uploading 
+start.sync.finished = Synchronization finished!
 start.sync.error.title = Error
 start.sync.warning.title = Warning
 start.sync.error.message = Synchronization failed. Please try again.
